src/Grammar/NqlParser.js
// Generated from NqlParser.g4 by ANTLR 4.9
// jshint ignore: start
import antlr4 from 'antlr4';
import NqlParserListener from './NqlParserListener.js';



export const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class NqlParser extends antlr4.Parser {

    static grammarFileName = "NqlParser.g4";
    static literalNames = [ null, "'_'", "'('", "')'", "'['", "']'", "'|'", 
                            "'?'", "':'", "';'", "'.'", "','", null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, "'+'", "'-'", "'*'", "'/'", 
                            "'%'" ];
    static symbolicNames = [ null, "UNDERSCORE", "LP", "RP", "LB", "RB", 
                             "PIPE", "QUESTION", "COLON", "SEMI_COLON", 
                             "DOT", "COMMA", "AS", "TRUE", "FALSE", "BETWEEN", 
                             "EQUALS", "NOT_EQUALS", "GREATER", "LESS", 
                             "GREATER_EQUALS", "LESS_EQUALS", "REGEX_MATCH", 
                             "MATCH", "EXACTLY_MATCH", "WAS", "DURING", 
                             "BEFORE", "AFTER", "NOT", "AND", "OR", "XOR", 
                             "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", "MOD", 
                             "NULL", "IN", "NOT_IN", "ORDERBY", "ASC", "DESC", 
                             "ISSUE", "SATISFY", "EXISTS", "UNSIGN", "DECIMAL", 
                             "ID", "KEY", "MILLIS", "SECONDS", "MINUTES", 
                             "HOURS", "DAYS", "WEEKS", "DATE", "DATETIME", 
                             "STRING", "WS" ];
    static ruleNames = [ "query", "sortTuple", "logic", "period", "historicalCompare", 
                         "compare", "factor", "functionCall", "path", "pathElement", 
                         "duration", "raw", "sortDirection", "stringOperator", 
                         "collectionOperator", "compareOperator", "logicBinaryOp" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NqlParser.ruleNames;
        this.literalNames = NqlParser.literalNames;
        this.symbolicNames = NqlParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 2:
    	    		return this.logic_sempred(localctx, predIndex);
    	case 6:
    	    		return this.factor_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    logic_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    factor_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 6);
    		case 3:
    			return this.precpred(this._ctx, 5);
    		case 4:
    			return this.precpred(this._ctx, 4);
    		case 5:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, NqlParser.RULE_query);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.logic(0);
	        this.state = 44;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===NqlParser.ORDERBY) {
	            this.state = 35;
	            this.match(NqlParser.ORDERBY);
	            this.state = 36;
	            localctx._sortTuple = this.sortTuple();
	            localctx.sortTuples.push(localctx._sortTuple);
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===NqlParser.COMMA) {
	                this.state = 37;
	                this.match(NqlParser.COMMA);
	                this.state = 38;
	                localctx._sortTuple = this.sortTuple();
	                localctx.sortTuples.push(localctx._sortTuple);
	                this.state = 43;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sortTuple() {
	    let localctx = new SortTupleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, NqlParser.RULE_sortTuple);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.path();
	        this.state = 47;
	        this.sortDirection();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	logic(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new LogicContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 4;
	    this.enterRecursionRule(localctx, 4, NqlParser.RULE_logic, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new LogicCompareExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 50;
	            this.compare();
	            break;

	        case 2:
	            localctx = new LogicHistoricalCompareExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 51;
	            this.historicalCompare();
	            break;

	        case 3:
	            localctx = new LogicPrecededExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 52;
	            this.match(NqlParser.LP);
	            this.state = 53;
	            localctx.inner = this.logic(0);
	            this.state = 54;
	            this.match(NqlParser.RP);
	            break;

	        case 4:
	            localctx = new LogicNotExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 56;
	            this.match(NqlParser.NOT);
	            this.state = 57;
	            localctx.inner = this.logic(2);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 66;
	        this._errHandler.sync(this);
	        let _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new LogicBinaryExprContext(this, new LogicContext(this, _parentctx, _parentState));
	                localctx.left = _prevctx;
	                this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_logic);
	                this.state = 60;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 61;
	                localctx.op = this.logicBinaryOp();
	                this.state = 62;
	                localctx.right = this.logic(2); 
	            }
	            this.state = 68;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	period() {
	    let localctx = new PeriodContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, NqlParser.RULE_period);
	    try {
	        this.state = 80;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case NqlParser.BEFORE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 69;
	            this.match(NqlParser.BEFORE);
	            this.state = 70;
	            localctx.from = this.factor(0);
	            break;
	        case NqlParser.AFTER:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 71;
	            this.match(NqlParser.AFTER);
	            this.state = 72;
	            localctx.from = this.factor(0);
	            break;
	        case NqlParser.DURING:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 73;
	            this.match(NqlParser.DURING);
	            this.state = 74;
	            this.match(NqlParser.LP);
	            this.state = 75;
	            localctx.from = this.factor(0);
	            this.state = 76;
	            this.match(NqlParser.COMMA);
	            this.state = 77;
	            localctx.to = this.factor(0);
	            this.state = 78;
	            this.match(NqlParser.RP);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	historicalCompare() {
	    let localctx = new HistoricalCompareContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, NqlParser.RULE_historicalCompare);
	    var _la = 0; // Token type
	    try {
	        this.state = 121;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new HistoricalNumericCompareExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 82;
	            localctx.left = this.factor(0);
	            this.state = 83;
	            this.match(NqlParser.WAS);
	            this.state = 85;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 84;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << NqlParser.EQUALS) | (1 << NqlParser.NOT_EQUALS) | (1 << NqlParser.GREATER) | (1 << NqlParser.LESS) | (1 << NqlParser.GREATER_EQUALS) | (1 << NqlParser.LESS_EQUALS))) !== 0)) {
	                this.state = 87;
	                localctx.op = this.compareOperator();
	            }

	            this.state = 90;
	            localctx.right = this.factor(0);
	            this.state = 91;
	            this.period();
	            break;

	        case 2:
	            localctx = new HistoricalStringMatchExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 93;
	            localctx.value = this.factor(0);
	            this.state = 94;
	            this.match(NqlParser.WAS);
	            this.state = 96;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 95;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 98;
	            localctx.op = this.stringOperator();
	            this.state = 99;
	            localctx.pattern = this.factor(0);
	            this.state = 100;
	            this.period();
	            break;

	        case 3:
	            localctx = new HistoricalBetweenExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 102;
	            localctx.value = this.factor(0);
	            this.state = 103;
	            this.match(NqlParser.WAS);
	            this.state = 105;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 104;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 107;
	            this.match(NqlParser.BETWEEN);
	            this.state = 108;
	            localctx.includeLower = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===NqlParser.LP || _la===NqlParser.LB)) {
	                localctx.includeLower = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 109;
	            localctx.lower = this.factor(0);
	            this.state = 110;
	            this.match(NqlParser.COMMA);
	            this.state = 111;
	            localctx.upper = this.factor(0);
	            this.state = 112;
	            localctx.includeUpper = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===NqlParser.RP || _la===NqlParser.RB)) {
	                localctx.includeUpper = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 113;
	            this.period();
	            break;

	        case 4:
	            localctx = new HistoricalCollectionMatchExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 115;
	            localctx.value = this.factor(0);
	            this.state = 116;
	            this.match(NqlParser.WAS);
	            this.state = 117;
	            localctx.op = this.collectionOperator();
	            this.state = 118;
	            localctx.collection = this.factor(0);
	            this.state = 119;
	            this.period();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	compare() {
	    let localctx = new CompareContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, NqlParser.RULE_compare);
	    var _la = 0; // Token type
	    try {
	        this.state = 166;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ExistsExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 123;
	            this.path();
	            this.state = 125;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 124;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 127;
	            this.match(NqlParser.EXISTS);
	            break;

	        case 2:
	            localctx = new NumericCompareExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 129;
	            localctx.left = this.factor(0);
	            this.state = 131;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 130;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 133;
	            localctx.op = this.compareOperator();
	            this.state = 134;
	            localctx.right = this.factor(0);
	            break;

	        case 3:
	            localctx = new StringMatchExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 136;
	            localctx.value = this.factor(0);
	            this.state = 138;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 137;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 140;
	            localctx.op = this.stringOperator();
	            this.state = 141;
	            localctx.pattern = this.factor(0);
	            break;

	        case 4:
	            localctx = new BetweenExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 143;
	            localctx.value = this.factor(0);
	            this.state = 144;
	            this.match(NqlParser.BETWEEN);
	            this.state = 145;
	            localctx.includeLower = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===NqlParser.LP || _la===NqlParser.LB)) {
	                localctx.includeLower = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 146;
	            localctx.lower = this.factor(0);
	            this.state = 147;
	            this.match(NqlParser.COMMA);
	            this.state = 148;
	            localctx.upper = this.factor(0);
	            this.state = 149;
	            localctx.includeUpper = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===NqlParser.RP || _la===NqlParser.RB)) {
	                localctx.includeUpper = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 5:
	            localctx = new CollectionMatchExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 151;
	            localctx.value = this.factor(0);
	            this.state = 152;
	            localctx.op = this.collectionOperator();
	            this.state = 153;
	            localctx.collection = this.factor(0);
	            break;

	        case 6:
	            localctx = new SatisfyExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 155;
	            this.match(NqlParser.ISSUE);
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 156;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 159;
	            this.match(NqlParser.IN);
	            this.state = 160;
	            this.functionCall();
	            break;

	        case 7:
	            localctx = new SatisfyExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 162;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===NqlParser.NOT) {
	                this.state = 161;
	                this.match(NqlParser.NOT);
	            }

	            this.state = 164;
	            this.match(NqlParser.SATISFY);
	            this.state = 165;
	            this.functionCall();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	factor(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new FactorContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, NqlParser.RULE_factor, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 198;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new RawValueExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 169;
	            this.raw();
	            break;

	        case 2:
	            localctx = new DurationExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 170;
	            this.duration();
	            break;

	        case 3:
	            localctx = new PathExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 171;
	            this.path();
	            break;

	        case 4:
	            localctx = new PrecededExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 172;
	            this.match(NqlParser.LP);
	            this.state = 173;
	            localctx.inner = this.factor(0);
	            this.state = 174;
	            this.match(NqlParser.RP);
	            break;

	        case 5:
	            localctx = new FunctionCallExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 176;
	            this.functionCall();
	            break;

	        case 6:
	            localctx = new MathNegativeExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 177;
	            this.match(NqlParser.SUBTRACT);
	            this.state = 178;
	            localctx.inner = this.factor(8);
	            break;

	        case 7:
	            localctx = new ConditionExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 179;
	            this.match(NqlParser.LP);
	            this.state = 180;
	            localctx.condition = this.logic(0);
	            this.state = 181;
	            this.match(NqlParser.QUESTION);
	            this.state = 182;
	            localctx.pass = this.factor(0);
	            this.state = 183;
	            this.match(NqlParser.COLON);
	            this.state = 184;
	            localctx.otherwise = this.factor(0);
	            this.state = 185;
	            this.match(NqlParser.RP);
	            break;

	        case 8:
	            localctx = new CommaListExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 187;
	            this.match(NqlParser.LB);
	            this.state = 188;
	            localctx._factor = this.factor(0);
	            localctx.elements.push(localctx._factor);
	            this.state = 193;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===NqlParser.COMMA) {
	                this.state = 189;
	                this.match(NqlParser.COMMA);
	                this.state = 190;
	                localctx._factor = this.factor(0);
	                localctx.elements.push(localctx._factor);
	                this.state = 195;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 196;
	            this.match(NqlParser.RB);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 217;
	        this._errHandler.sync(this);
	        let _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 215;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new MathBinaryExprContext(this, new FactorContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_factor);
	                    this.state = 200;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 201;
	                    localctx.op = this.match(NqlParser.MULTIPLY);
	                    this.state = 202;
	                    localctx.right = this.factor(8);
	                    break;

	                case 2:
	                    localctx = new MathBinaryExprContext(this, new FactorContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_factor);
	                    this.state = 203;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 204;
	                    localctx.op = this.match(NqlParser.DIVIDE);
	                    this.state = 205;
	                    localctx.right = this.factor(7);
	                    break;

	                case 3:
	                    localctx = new MathBinaryExprContext(this, new FactorContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_factor);
	                    this.state = 206;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 207;
	                    localctx.op = this.match(NqlParser.MOD);
	                    this.state = 208;
	                    localctx.right = this.factor(6);
	                    break;

	                case 4:
	                    localctx = new MathBinaryExprContext(this, new FactorContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_factor);
	                    this.state = 209;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 210;
	                    localctx.op = this.match(NqlParser.ADD);
	                    this.state = 211;
	                    localctx.right = this.factor(5);
	                    break;

	                case 5:
	                    localctx = new MathBinaryExprContext(this, new FactorContext(this, _parentctx, _parentState));
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, NqlParser.RULE_factor);
	                    this.state = 212;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 213;
	                    localctx.op = this.match(NqlParser.SUBTRACT);
	                    this.state = 214;
	                    localctx.right = this.factor(4);
	                    break;

	                } 
	            }
	            this.state = 219;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	functionCall() {
	    let localctx = new FunctionCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, NqlParser.RULE_functionCall);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        localctx.functionName = this.match(NqlParser.ID);
	        this.state = 221;
	        this.match(NqlParser.LP);
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << NqlParser.LP) | (1 << NqlParser.LB) | (1 << NqlParser.TRUE) | (1 << NqlParser.FALSE))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (NqlParser.SUBTRACT - 34)) | (1 << (NqlParser.NULL - 34)) | (1 << (NqlParser.UNSIGN - 34)) | (1 << (NqlParser.DECIMAL - 34)) | (1 << (NqlParser.ID - 34)) | (1 << (NqlParser.KEY - 34)) | (1 << (NqlParser.MILLIS - 34)) | (1 << (NqlParser.SECONDS - 34)) | (1 << (NqlParser.MINUTES - 34)) | (1 << (NqlParser.HOURS - 34)) | (1 << (NqlParser.DAYS - 34)) | (1 << (NqlParser.WEEKS - 34)) | (1 << (NqlParser.DATE - 34)) | (1 << (NqlParser.DATETIME - 34)) | (1 << (NqlParser.STRING - 34)))) !== 0)) {
	            this.state = 222;
	            localctx._factor = this.factor(0);
	            localctx.args.push(localctx._factor);
	            this.state = 227;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===NqlParser.COMMA) {
	                this.state = 223;
	                this.match(NqlParser.COMMA);
	                this.state = 224;
	                localctx._factor = this.factor(0);
	                localctx.args.push(localctx._factor);
	                this.state = 229;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 232;
	        this.match(NqlParser.RP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	path() {
	    let localctx = new PathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, NqlParser.RULE_path);
	    try {
